Added section to the resume/cv

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <script type="text/javascript" src="js/jquery.localScroll.js"></script>
     <script type="text/javascript" src="js/jquery.scrollTo.js"></script>
 
-
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -246,18 +245,98 @@
             <!-- Education SubDiv -->
             <div>
                 <p>
+                    <strong>Vanderbilt University</strong>,
+                    <em>Nashville, TN</em>:</p>
+                <ul>
+                    <li>Pursuing a PhD. in <strong>biostatistics.</strong></li>
+                    <li>Starting August 2015.</li>
+                    <li>University Graduate Fellowship</li>
+                </ul>
+
+                <p>
                     <strong>University of Vermont</strong>,
-                    <em>Burlington VT</em>:</p>
+                    <em>Burlington, VT</em>:</p>
                 <ul>
                     <li>B.S. in
                         <strong>mathematics and statistics</strong> with a minor in
-                        <strong>computer science</strong>, Honors College Scholar.</li>
+                        <strong>computer science</strong>, Cum Laude, Honors College Scholar.</li>
                     <li>May, 2015.</li>
                     <li>GPA:
                         <strong>3.82/4.0</strong>
                     </li>
                 </ul>
 
+
+            </div>
+            <hr>
+
+            <h3 class="resumeSections">Talks and Publications:</h3>
+            <div>
+                <ul>
+                    <li>
+                        <strong>An Agent Based Model of Mysis Migration</strong>, International Association of Great Lakes Research Conference (talk).
+                        <ul>
+                            <li>May 2015</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>D3.js and its Role in Data Science</strong>, Burlington Data Scientists Meetup (talk).
+                        <ul>
+                            <li>May 2015</li>
+                        </ul>
+                        <ul>
+                            <li><a href = "https://github.com/BTVDataScience/BTV_Data_Science_Talk/blob/master/dataMeetupTalk.pdf">Slides</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Asymmetric Linkage Disequilibrium: Tools for Dissecting Multiallelic LD</strong>, Journal of Human Immunology (paper).
+                        <ul>
+                            <li>Authored with Richard Single, Vanja Paunic, Mark Albrecht and Martin Maiers</li>
+                        </ul>
+                        <ul>
+                            <li>Pre-Print submitted May 2015</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Declines of Mysis diluviana in the Great Lakes</strong>, Journal of Great Lakes Research (paper).
+                        <ul>
+                            <li>Authored with Peter Euclide and Jason Stockwell</li>
+                        </ul>
+                        <ul>
+                            <li>Pre-Print submitted March 2015</li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <strong>D3.js and its Role in Data Science</strong>, Burlington Data Scientists Meetup (talk).
+                        <ul>
+                            <li>May 2015</li>
+                        </ul>
+                        <ul>
+                            <li><a href = "https://github.com/BTVDataScience/BTV_Data_Science_Talk/blob/master/dataMeetupTalk.pdf">Slides</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <strong>RMarkdown and Reproducable Research</strong>, Rubenstein Ecosystem Science Laboratory (talk).
+                        <ul>
+                            <li>February 2015</li>
+                        </ul>
+                        <ul>
+                            <li><a href = "http://rpubs.com/nstrayer/rmarkdownPres">RMarkdown document.</a></li>
+                        </ul>
+                    </li>
+                </ul>
 
             </div>
             <hr>
@@ -376,25 +455,24 @@
             <div>
 
                 <h4>Experienced with the following:</h4>
-                <p>
-                    <em>Experience level:</em> * (weak), ** (medium), *** (strong)</p>
+
                 <ul>
                     <li>
                         <strong>Programming Languages</strong>:
                         <ul>
-                            <li>Python ***</li>
-                            <li>JavaScript ***
+                            <li>Python </li>
+                            <li>JavaScript
                                 <ul>
-                                    <li>JQuery ***</li>
-                                    <li>Angular.js *</li>
-                                    <li>D3.js ***</li>
-                                    <li>three.js*</li>
+                                    <li>JQuery </li>
+                                    <li>Angular.js </li>
+                                    <li>D3.js </li>
+                                    <li>three.js</li>
                                 </ul>
                             </li>
-                            <li>Matlab ***</li>
-                            <li>R ***</li>
-                            <li>php *</li>
-                            <li>Swift *</li>
+                            <li>Matlab </li>
+                            <li>R </li>
+                            <li>php </li>
+                            <li>Swift </li>
                         </ul>
                     </li>
                 </ul>
@@ -402,8 +480,8 @@
                     <li>
                         <strong>Technical Writing</strong>:
                         <ul>
-                            <li>HTML ***</li>
-                            <li>LateX ***</li>
+                            <li>HTML </li>
+                            <li>LateX </li>
                         </ul>
                     </li>
                 </ul>
@@ -411,9 +489,9 @@
                     <li>
                         <strong>Software</strong>:
                         <ul>
-                            <li>Microsoft Office Suite ***</li>
-                            <li>Adobe Creative Suite **</li>
-                            <li>JMP ***</li>
+                            <li>Microsoft Office Suite </li>
+                            <li>Adobe Creative Suite </li>
+                            <li>JMP </li>
                         </ul>
                     </li>
                 </ul>
@@ -511,7 +589,7 @@
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
                 (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+            }, i[r].l = 1  new Date();
             a = s.createElement(o),
                 m = s.getElementsByTagName(o)[0];
             a.async = 1;
