--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
                     <li>
                         <strong>An Agent Based Model of Mysis Migration</strong>, International Association of Great Lakes Research Conference (talk).
                         <ul>
+                            <li>Authored with Brian O'Malley, Sture Hansson and Jason Stockwell</li>
+                        </ul>
+                        <ul>
                             <li>May 2015</li>
                         </ul>
                     </li>
@@ -505,7 +508,6 @@
             <div>
                 <ul>
                     <li>Mu Sigma Rho, Statistics Honors Society </li>
-                    <li>Cum Loude</li>
                     <li>First place project (among 163 projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
                     <li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
                     <li>Presidential Scholarship </li>
