Some other minor changes

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <ul>
                     <li>Pursuing a PhD. in <strong>biostatistics.</strong></li>
                     <li>Starting August 2015.</li>
-                    <li>University Graduate Fellowship</li>
+                    <li>University Graduate Fellow.</li>
                 </ul>
 
                 <p>
@@ -474,6 +474,11 @@
                             </li>
                             <li>Matlab </li>
                             <li>R </li>
+                                <ul>
+                                    <li>Shiny</li>
+                                    <li>RMarkdown</li>
+                                    <li>Ggplot2</li>
+                                </ul>
                             <li>php </li>
                             <li>Swift </li>
                         </ul>
