Added farmers market project.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,25 @@
         <h1 class = "col-xs-12"><a name="projects">Projects</a>
         </h1>
 
-        <div class="row ">
+        <div class="row project">
+            <div class="col-xs-12 col-sm-6 text-center">
+                <a href="nstrayer.me/farmersMarkets" target="_blank">
+                    <img class="projectPic" src="images/farmersMarkets.png" alt="Farmers Markets Viz" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="nstrayer.me/farmersMarkets" target="_blank"> What Do Farmer's Markets Sell?</strong> </a>
+                        <li>Select different good types (e.g. Vegetables, Fruit) and see which markets sell them.</li>
+                        <li>Assemble different combinations of goods to explore regional trends.</li>
+                        <li>Dynamic layout adjusts to mobile or desktop views.</li>
+                        <li>Data courtesy of <a href="http://catalog.data.gov/dataset/farmers-markets-geographic-data" target="_blank"> Data.gov </a>.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row project">
             <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank">
                     <img class="projectPic" src="images/projectPics/manhattanPlots.png" alt="Manhattan Plots Viewer" width="">
