--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                         <li>Assemble different combinations of goods to explore regional trends.</li>
                         <li>Dynamic layout adjusts to mobile or desktop views.</li>
                         <li>Data courtesy of <a href="http://catalog.data.gov/dataset/farmers-markets-geographic-data" target="_blank"> Data.gov </a>.</li>
+                        <li><a href="https://github.com/nstrayer/farmersMarkets" target="_blank"> Github Repo </a>.</li>
                 </ul>
             </div>
         </div>
