edited farmers market entry

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
         <div class="row project">
             <div class="col-xs-12 col-sm-6 text-center">
-                <a href="nstrayer.me/farmersMarkets" target="_blank">
+                <a href="http://nickstrayer.me/farmersMarkets/" target="_blank">
                     <img class="projectPic" src="images/farmersMarkets.png" alt="Farmers Markets Viz" width="">
                 </a>
             </div>
 
             <div class="col-xs-12 col-sm-6">
                 <ul>
-                    <strong class="projectTitle"><a href="/farmersMarkets" target="_blank"> What Do Farmer's Markets Sell?</strong> </a>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/farmersMarkets/" target="_blank"> What Do Farmer's Markets Sell?</strong> </a>
                         <li>Select different good types (e.g. Vegetables, Fruit) and see which markets sell them.</li>
                         <li>Assemble different combinations of goods to explore regional trends.</li>
                         <li>Dynamic layout adjusts to mobile or desktop views.</li>
