edited farmers market entry

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         <li>Select different good types (e.g. Vegetables, Fruit) and see which markets sell them.</li>
                         <li>Assemble different combinations of goods to explore regional trends.</li>
                         <li>Dynamic layout adjusts to mobile or desktop views.</li>
+                        <li>Be patient with it, more than eight thousand points are being drawn to the screen. It will bog down older phones/computers.</li>
                         <li>Data courtesy of <a href="http://catalog.data.gov/dataset/farmers-markets-geographic-data" target="_blank"> Data.gov</a>.</li>
                         <li><a href="https://github.com/nstrayer/farmersMarkets" target="_blank"> Github Repo</a>.</li>
                 </ul>
