Added new project

--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
 
         <div class="row project">
             <div class="col-xs-12 col-sm-6 text-center">
+                <a href="http://nickstrayer.me/marketStory/" target="_blank">
+                    <img class="projectPic" src="images/marketStory.png" alt="Farmers Markets States" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/marketStory/" target="_blank"> State Farmers Market Profiles.</strong> </a>
+                        <li>Companion visualization to <a href="http://nickstrayer.me/farmersMarkets/" target="_blank"> What Do Farmer's Markets Sell?</a></li>
+                        <li>Explore different states path's through different metrics relating to farmers markets.</li>
+                        <li>Uses equal sized states map as menu to reduce bias associated with normal projections.</li>
+                        <li>Data courtesy of <a href="http://catalog.data.gov/dataset/farmers-markets-geographic-data" target="_blank"> Data.gov</a>.</li>
+                        <li><a href="https://github.com/nstrayer/farmersMarkets" target="_blank"> Github Repo</a>.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row project">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://nickstrayer.me/farmersMarkets/" target="_blank">
                     <img class="projectPic" src="images/farmersMarkets.png" alt="Farmers Markets Viz" width="">
                 </a>
