Added a period in a project title.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             <div class="col-xs-12 col-sm-6">
                 <ul>
-                    <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"> Interactive Manhattan Plot Viewer</strong> </a>
+                    <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"> Interactive Manhattan Plot Viewer.</strong> </a>
                         <li>Developed as an experiment in exploratory data visualization.</li>
                         <li>Select different controls for comparison, e.g. non-dominant arm growth to see linked snps.</li>
                         <li>A manhattan plot is a commonly used tool in accessing genetic roots for traits</li>
