Updated about me section

--- a/index.html
+++ b/index.html
@@ -59,21 +59,19 @@
             <img class="photos" src="images/bikes.jpg" alt="Biking down the coast of California" height="200px" width="250px">
             <img class="photos" src="images/billings.jpg" alt="Billings Library, UVM" height="200px" width="250px">
         </p>
-        <p>I am a senior at the
-            <em>University of Vermont</em> majoring in
+        <p>I am a recent graduate (May, 2015) of the
+            <em>University of Vermont</em> where I majored in
             <strong>mathematics</strong> and
-            <strong>statistics</strong> and minoring in
-            <strong>computer science.</strong>
+            <strong>statistics</strong> and minored in
+            <strong>computer science.</strong> Starting in August, 2015 I will be a graduate student pursuing a PhD in
+            biostatistics at Vanderbilt University in Nashville, TN.
         </p>
-        <p>My interests lie in the utilization of the incredible power that modern
-            <strong>data</strong> affords us to help better the world.</p>
-        <p>I don't think that one should need a degree in a STEM field to be able to benefit from this data. Due to this, one of my main interests is visualizing data to accurately reflect the underlying trends without all of the fluff that data scientists
-            love to layer on.</p>
+        <p>I like data. mapanipulating it, making it (modeling), visualizing it and yes, even cleaning it. </p>
         <p>My current research interests include:
             <strong>statistical genetics</strong>,
             <strong>data visualization</strong> and
             <strong>mathematical biology/ ecology modeling</strong>.</p>
-        <p>When I am not in "school mode" I love to bike places and appreciate architecture whilst doing so.</p>
+        <p>When I am not in "school mode" I love to bike places, read science fiction and look at cool buildings.</p>
         <p>The curve at the begining of this page is the beautiful <a href="http://mathworld.wolfram.com/LogisticDistribution.html">logistic distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
             <p>Have a fantastic day!</p>
     </div>
