Updated about me section

--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
             <img class="photos" src="images/bikes.jpg" alt="Biking down the coast of California" height="200px" width="250px">
             <img class="photos" src="images/billings.jpg" alt="Billings Library, UVM" height="200px" width="250px">
         </p>
-        <p>I am a recent graduate (May, 2015) of the
+        <p>I am a recent graduate (May '15) of the
             <em>University of Vermont</em> where I majored in
             <strong>mathematics</strong> and
             <strong>statistics</strong> and minored in
-            <strong>computer science.</strong> Starting in August, 2015 I will be a graduate student pursuing a PhD in
-            biostatistics at Vanderbilt University in Nashville, TN.
+            <strong>computer science.</strong> Starting in August '15 I will be a graduate student pursuing a PhD in
+            biostatistics at <em>Vanderbilt University</em> in Nashville, TN.
         </p>
-        <p>I like data. mapanipulating it, making it (modeling), visualizing it and yes, even cleaning it. </p>
+        <p>I like data. mapanipulating it, making it (modeling), visualizing it and yes, even cleaning it. I do these things with
+        some combination of R, Python and Javascript (d3.js in particular).</p>
         <p>My current research interests include:
             <strong>statistical genetics</strong>,
             <strong>data visualization</strong> and
