--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <strong>computer science.</strong> Starting in August '15 I will be a graduate student pursuing a PhD in
             biostatistics at <em>Vanderbilt University</em> in Nashville, TN.
         </p>
-        <p>I like data. mapanipulating it, making it (modeling), visualizing it and yes, even cleaning it. I do these things with
+        <p>I like data. Manipulating it, making it (modeling), visualizing it and yes, even cleaning it. I do these things with
         some combination of R, Python and Javascript (d3.js in particular).</p>
         <p>My current research interests include:
             <strong>statistical genetics</strong>,
