Updated projects and about me

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             <img class="photos" src="images/bikes.jpg" alt="Biking down the coast of California" height="200px" width="250px">
             <img class="photos" src="images/billings.jpg" alt="Billings Library, UVM" height="200px" width="250px">
         </p>
-        <p>I am a recent graduate (May '15) of the
+        <p>I am a graduate student pursuing a PhD in biostatistics at <em>Vanderbilt University</em>.
+            Recently (May '15), I graduated from the
             <em>University of Vermont</em> where I majored in
             <strong>mathematics</strong> and
             <strong>statistics</strong> and minored in
-            <strong>computer science.</strong> Starting in August '15 I will be a graduate student pursuing a PhD in
-            biostatistics at <em>Vanderbilt University</em> in Nashville, TN.
+            <strong>computer science.</strong>
         </p>
         <p>I like data. Manipulating it, making it (modeling), visualizing it and yes, even cleaning it. I do these things with
         some combination of R, Python and Javascript (d3.js in particular).</p>
         <p>My current research interests include:
             <strong>statistical genetics</strong>,
             <strong>data visualization</strong> and
-            <strong>mathematical biology/ ecology modeling</strong>.</p>
+            <strong>scientific communication</strong>.</p>
         <p>When I am not in "school mode" I love to bike places, read science fiction and look at cool buildings.</p>
         <p>The curve at the begining of this page is the beautiful <a href="http://mathworld.wolfram.com/LogisticDistribution.html">logistic distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
             <p>Have a fantastic day!</p>
@@ -84,6 +84,60 @@
 
         <h1 class = "col-xs-12"><a name="projects">Projects</a>
         </h1>
+
+        <!-- Integral transform viz -->
+        <div class="row project">
+            <div class="col-xs-12 col-sm-6 text-center">
+                <a href="http://nickstrayer.me/distributionTransforms/" target="_blank">
+                    <img class="projectPic" src="images/projectPics/integralTransform.png" alt="Integral Transform" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/distributionTransforms/" target="_blank"> Visualizing Probability Distribution Transformations.</strong> </a>
+                        <li>Made in an effort to visualize what happens when you transform a probability distribution with a function.</li>
+                        <li>Uses the normal distribution transformed by the normal cdf, resulting in a uniform distribution. See <a href = "https://en.wikipedia.org/wiki/Probability_integral_transform"> here</a> for more info. </li>
+                        <li>Inspired by my course work in Probability at Vanderbilt.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- wildfires viz -->
+        <div class="row project">
+            <div class="col-xs-12 col-sm-6 text-center">
+                <a href="http://nickstrayer.me/wildfires/" target="_blank">
+                    <img class="projectPic" src="images/projectPics/wildfires.png" alt="Wildfires" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/wildfires/" target="_blank"> Where Are Wildfires Burning?</strong> </a>
+                        <li>Uses open data from NASA satelites on global temperature anomalies.</li>
+                        <li>Fresh data is downloaded every day and pushed to the static page via shell scripts avoiding the need for servers.</li>
+                        <li><a href="https://github.com/nstrayer/wildfires" target="_blank"> Github Repo</a>.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- wildfires viz -->
+        <div class="row project">
+            <div class="col-xs-12 col-sm-6 text-center">
+                <a href="http://nickstrayer.me/D3ManhattanPlots/" target="_blank">
+                    <img class="projectPic" src="images/projectPics/d3Manhattan.png" alt="mannhattanplotin" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/D3ManhattanPlots/" target="_blank"> Interactive Manhattan Plot R Package.</strong> </a>
+                        <li>An R package to generate interactive and embedable manhattan plots for genome wide association studies.</li>
+                        <li>Binds R and Javascript + D3 using the <a href = "http://www.htmlwidgets.org/">HTMLWidgets</a> package.</li>
+                        <li><a href="https://github.com/nstrayer/D3ManhattanPlots" target="_blank"> Github Repo</a>.</li>
+                </ul>
+            </div>
+        </div>
 
         <div class="row project">
             <div class="col-xs-12 col-sm-6 text-center">
