Updated resume a bit

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <em>Nashville, TN</em>:</p>
                 <ul>
                     <li>Pursuing a PhD. in <strong>biostatistics.</strong></li>
-                    <li>Starting August 2015.</li>
+                    <li>Started August 2015.</li>
                     <li>University Graduate Fellow.</li>
                 </ul>
 
@@ -366,6 +366,17 @@
             <div>
                 <ul>
                     <li>
+                        <strong>Asymmetric Linkage Disequilibrium: Tools for Dissecting Multiallelic LD</strong>, Journal of Human Immunology (paper).
+                        <ul>
+                            <li>Authored with Richard Single, Vanja Paunic, Mark Albrecht and Martin Maiers</li>
+                        </ul>
+                        <ul>
+                            <li>Accepted Sep, 2015</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
                         <strong>An Agent Based Model of Mysis Migration</strong>, International Association of Great Lakes Research Conference (talk).
                         <ul>
                             <li>Authored with Brian O'Malley, Sture Hansson and Jason Stockwell</li>
@@ -383,17 +394,6 @@
                         </ul>
                         <ul>
                             <li><a href = "https://github.com/BTVDataScience/BTV_Data_Science_Talk/blob/master/dataMeetupTalk.pdf">Slides</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Asymmetric Linkage Disequilibrium: Tools for Dissecting Multiallelic LD</strong>, Journal of Human Immunology (paper).
-                        <ul>
-                            <li>Authored with Richard Single, Vanja Paunic, Mark Albrecht and Martin Maiers</li>
-                        </ul>
-                        <ul>
-                            <li>Pre-Print submitted May 2015</li>
                         </ul>
                     </li>
                 </ul>
