Fixed name of distribution

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <strong>data visualization</strong> and
                 <strong>scientific communication</strong>.</p>
             <p>When I am not in "school mode" I love to bike places, read science fiction and look at cool buildings.</p>
-            <p>The curve at the begining of this page is the beautiful <a href="http://mathworld.wolfram.com/LogisticDistribution.html">logistic distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
+            <p>The curve at the begining of this page is the beautiful <a href="https://en.wikipedia.org/wiki/Log-normal_distribution">log-normal distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
                 <p>Have a fantastic day!</p>
         </div>
         <div class = "col-xs-12, col-md-4" id = "twitter">
