Fixed email to vanderbilt

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
         <p> I am always interested in getting involved in new projects or just connecting with others. Feel free to get in touch!
         </p>
         <p>
-            <strong>email: </strong> nstrayer (at) uvm.edu
+            <strong>email: </strong> n.strayer (at) vanderbilt (dot) edu
         </p>
         <p>
             <strong>twitter: </strong> <a href="https://twitter.com/NicholasStrayer" target="_blank">@NicholasStrayer </a>
